On a changer le plan

--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -15,8 +15,7 @@
 \def \ttprofname{Isabelle Lallemand} % teachers name
 \def \ttabrv{FLE804 } % abbreviation of names class
 \def \ttabrvxt{} % period
-\def \mytitle{Proposition de projet } % Big title
-\def \mysubtitle{FLE Avancé - Deuxième semestre de 2011} % subtitle
+\def \mytitle{Le réchauffement climatique en France} % Big title
 \def \ttauthi{Angie Añazgo La Rosa} % author's name
 \def \ttxti{Casier: 200 } % Extra text right side of name
 \def \ttauthii{Tiago Chedraoui Silva} % author's name
@@ -24,103 +23,39 @@
 \def \ttdate{Novembre 15, 2011} % date
 
 \begin{document}
+
 \titleTMB 
 \newpage
 \tableofcontents
 \newpage
 
-\section{Introduction}
+\section*{Introduction}
 
-\subsection{Origine du débat}
-\subsection{Sources utilisés}
-Quels sont les sources de notre travail? Une liste de sources.
-\subsection{Motivation}
-Notre motivation pour travailler ce sujet
-\subsection{Description du sujet}
-Décrire les impacts du changement climatique, la cause, etc.
+\section{Approche théorique du réchauffement climatique}
+\subsection{ Les concepts à savoir sur le réchauffement climatique}
+\subsection{L’impact et le danger liés au réchauffement climatique}
+\subsection{Les conséquences en France}
 
 
-\section{Points de vue}
-\subsection{Réaction de la société}
-On décrira chaque position: les écologistes, le gouvernement, la société en général, la presse, etc
-Il faut choisir et résumer lesquels
-
-\subsection{Contraintes}
-
-\subsubsection{D'ordre scientifique}
-
-\begin{itemize}
-\item Pression des politiciens sur les scientifiques
-\item Pression des écologistes sur les politiciens
-\end{itemize}
-
-\subsubsection{Sociales}
-
-\begin{itemize}
-\item Médiatisation sensationnaliste
-\item Société de consommation
-\end{itemize}
-
-\subsubsection{Gouvernementales}
-
-\begin{itemize}
-\item Protocole de Kyoto
-\item Taxes sur les émissions de Gaz à effet de serre
-\end{itemize}
-
-\subsubsection{Économiques}
-
-\begin{itemize}
-\item Nécessité de maintenir la croissance économique
-\item Coûts associés aux changements technologiques
-\end{itemize}
+\section{La position de la société française}
+\subsection{Les écologistes}
+\subsection{La société en général} 
+\subsection{Les entreprises}
+\subsection{Les économistes} 
 
 
-\section{Débat: Solutions proposés}
+\section{L’avis du gouvernement}
+\subsection{Les politiciens}
+\subsection{Les lois et taxes}
+\subsection{Les traités internationaux}
 
 
-\section{Sources}
-Ici on liste d'où on a obtenu l'information
+\section{Analyse des solutions proposés par chaque partie}
+\subsection{Présentation des solutions}
+\subsection{Comparaison des solutions et son impact dans la société}
 
-\subsection*{Plan}
-\label{subsec:cronograma}
-Le développement du projet de recherche est liées aux activités suivants. Le
-calendrier est présenté au tableau~\ref{tab:cronograma} et est organisée dans un
-période de 3 mois, avec début dans novembre de 2011 et fin en février de 2012.
 
-\begin{enumerate}
-\item Présentation et plan du travail de recherche.
-\item Recherche bibliographique sur le sujet.
-\item Production du dossier.
-\item Production de diapositives.
-\item Simulation de la présentation.
-\item Révision du diapositives.
-\item Exposé.
-
-\end{enumerate}
-
-\begin{table}[h]
-  \caption{Calendrier des activités}
-  \begin{center} {
-      \begin{tabular}{ |c|c|c|c|c|c|c|c|c|c|}
-        \hline
-        & \multicolumn{4}{|c|}{2011} & \multicolumn{4}{|c|}{2012}\\ \hline
-        \hline
-        &   \multicolumn{2}{|c|}{Novembre}   &  \multicolumn{2}{|c|}{Décembre}& \multicolumn{2}{|c|}{Janvier} & \multicolumn{2}{|c|}{Février} \\ \hline
-        \hline
-        & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 & 1-15 & 16-30 \\ \hline
-        1 & $\bullet$ & & & & & & & \\ \hline
-        2 & $\bullet$ & $\bullet$ & $\bullet$ & & & & & \\ \hline
-        3 &  &  & $\bullet$ & $\bullet$& & & & \\ \hline
-        4 & & & & & $\bullet$ & $\bullet$& $\bullet$ & \\ \hline
-        5 & & & & & & & $\bullet$ & \\ \hline
-        6 & & & & & & & $\bullet$ & \\ \hline
-        7 & & & & & & & & $\bullet$\\ \hline
-
-      \end{tabular}
-    }\end{center}
-  \label{tab:cronograma}
-\end{table}
-
+\section*{Conclusion}
+\section*{Bibliographie}
 
 \end{document}
