On a changer le plan

--- a/FLE/Proj/proj.tex
+++ b/FLE/Proj/proj.tex
@@ -22,6 +22,7 @@
 \def \ttxtii{Casier: 214 } % Extra text right side of name
 \def \ttdate{Novembre 15, 2011} % date
 
+\spc{1.5}
 \begin{document}
 
 \titleTMB 
@@ -32,7 +33,7 @@
 \section*{Introduction}
 
 \section{Approche théorique du réchauffement climatique}
-\subsection{ Les concepts à savoir sur le réchauffement climatique}
+\subsection{Les concepts à savoir sur le réchauffement climatique}
 \subsection{L’impact et le danger liés au réchauffement climatique}
 \subsection{Les conséquences en France}
 
